...
            android:id="@+id/last_cl_edit_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{isLastItem ? View.VISIBLE : View.GONE}">

            <ImageButton
                android:id="@+id/album_btn_edit_img"
                android:layout_width="@dimen/img_small_width"
                android:layout_height="@dimen/img_small_height"
                android:background="@drawable/ic_photo_primary_24dp"
                android:onClick="@{() -> viewModel.pickImgFromAlbum()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/camera_btn_edit_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/camera_btn_edit_img"
                android:layout_width="@dimen/img_small_width"
...
